--- a/templates/account.j2
+++ b/templates/account.j2
@@ -1,17 +1,76 @@
-     <!--Based on templates sourced from https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/edit_people.j2 -->
+  <!--Based on templates sourced from https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/edit_people.j2 -->
     
     <!DOCTYPE html>
     <html>
     <link rel="stylesheet" href="/style.css">
+    <head>
+	<title>People</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
+	<script language="JavaScript">
+	function showform(dowhat) {
+		/*
+		 * four DIVS: browse, insert, update, delete
+		 * this function sets one visible the others not
+		 */
+		if(dowhat == 'insert') {
+			document.getElementById('browse').style.display = 'none';
+			document.getElementById('insert').style.display = 'block';
+			document.getElementById('edit').style.display = 'none';
+			document.getElementById('delete').style.display = 'none';
+		} else if(dowhat == 'update') {
+			document.getElementById('browse').style.display = 'none';
+			document.getElementById('insert').style.display = 'none';
+			document.getElementById('edit').style.display = 'block';
+			document.getElementById('delete').style.display = 'none';
+		} else if(dowhat == 'delete') {
+			document.getElementById('browse').style.display = 'none';
+			document.getElementById('insert').style.display = 'none';
+			document.getElementById('edit').style.display = 'none';
+			document.getElementById('delete').style.display = 'block';
+		} else if(dowhat == 'all') {
+			document.getElementById('browse').style.display = 'block';
+			document.getElementById('insert').style.display = 'block';
+			document.getElementById('edit').style.display = 'block';
+			document.getElementById('delete').style.display = 'block';
+		} else { //by default display browse
+			document.getElementById('browse').style.display = 'block';
+			document.getElementById('insert').style.display = 'none';
+			document.getElementById('edit').style.display = 'none';
+			document.getElementById('delete').style.display = 'none';
+		}
+	}
+
+	function newAccount() {
+		showform('insert');
+	}
+
+	function updateAccount(aid) {
+		showform('update');
+	}
+
+	function deleteAccount(aid) {
+		showform('delete');
+	}
+
+	function browseAccounts() {
+		showform('browse');
+	}
+
+	function showAll() {
+		showform('all');
+	}
+	</script>
+</head>
+
+    <body onload="browseAccounts()">
+    <div id="browse">
     <caption>Accounts</caption>
     <table border="1" cellpadding="5">
-    <thead>
-    
+    <thead> 
     <tr>
         <!-- Iterate through each key in the first entry to get the
         column name -->
         {% for key in Accounts[0].keys() %}
-
         <!-- Create a <th> tag with the key inside of it, this will be
         our header row -->
         <th scope="col" data-field="{{ key }}" data-filter-control="input">{{ key }}</th>
@@ -28,11 +87,14 @@
         <!-- Create a <td> element with the value of that key in it -->
         <td>{{account[key]}}</td>
         {% endfor %}
-        <td><a href="transaction/{{account.account_id}}" class="btn btn-default">Edit</a></td>
+        <td><a href="transaction/{{account.account_id}}" class="btn btn-default">Transactions</a></td>
         <td><a href="edit_Accounts/{{account.account_id}}" class="btn btn-default">Edit</a></td>
 		<td><a href="delete_Accounts/{{account.account_id}}" class="btn btn-default">Delete</a></td>
     </tr>
     {% endfor %}
     </table>
+    <p>&nbsp;</p>
+    </div>	<!-- browse -->
     <td><a href="/" class="btn btn-default">Return</a></td>
+</body>
 </html>
