--- a/templates/main.j2
+++ b/templates/main.j2
@@ -10,7 +10,7 @@
 </body>
 <td><a href="/account" class="btn btn-default">Accounts</a></td>
 <td><a href="/customer" class="btn btn-default">Customers</a></td>
-<td><a href="/card" class="btn btn-default">Cards</a></td>
-<td><a href="/branch" class="btn btn-default">Branches</a></td>
+<td><a href="/cards" class="btn btn-default">Cards</a></td>
+<td><a href="/branches" class="btn btn-default">Branches</a></td>
 </html>
 
