--- a/templates/account.j2
+++ b/templates/account.j2
@@ -95,6 +95,48 @@
     </table>
     <p>&nbsp;</p>
     </div>	<!-- browse -->
+
+
+	<div id="insert">
+    <!-- form to INSERT new data into Accounts-->
+    <form id="insertAccount" action="/accounts" method="POST">
+        <legend><strong>Add Account</strong></legend>
+        <fieldset>
+            <!-- placeholder shows ghost text, required forces an input, pattern forces input adherence -->
+            <label for="name">Account Name:</label>
+            <input type="text" class="form-control" id="name" name="name" pattern="[A-Za-z]{1,}" placeholder="" required>
+
+            <label for="balance">Account Balance:</label>
+            <input type="text" class="form-control" id="balance" name="balance" pattern="[0-9]{1,}" placeholder="" required>
+        </fieldset>
+
+        <!-- Create 'Add Account' and 'Cancel' buttons -->
+        <input type="submit" value="Add Account" name="Add_Account" class="btn btn-primary" style="margin:.5rem;">
+        <input class="btn" type="button" value="Cancel" onClick="browseAccounts()"> 
+    </form>
+</div><!--insert-->
+
+	<div id="edit">
+    <!-- form to edit data in Accounts-->
+    <form id="editAccount" action="/edit_accounts/{{accounts[0].id}}" method="POST">
+        <legend><strong>Edit Account</strong></legend>
+        <fieldset>
+            <input type="hidden" value="{{accounts[0].id}}" class="form-control" id="accountID" name="accountID" required>
+            <label for="name">Account Name:</label>
+
+            <input type="text" class="form-control" id="name" name="name" pattern="[A-Za-z]{1,}" placeholder="{{accounts[0].name}}" required>
+            <label for="type">Account Type:</label>
+
+            <input type="text" class="form-control" id="type" name="type" pattern="[A-Za-z0-9]{1,}" placeholder="{{accounts[0].type}}" required>
+            <label for="balance">Account Balance:</label>
+
+            <input type="text" class="form-control" id="balance" name="balance" pattern="[0-9]{1,}" placeholder="{{accounts[0].balance}}" required> 
+        </fieldset>
+        <input class="btn" type="button" value="Cancel" onClick="browseAccounts()" style="margin:.5rem;"> 
+    </form>
+</div><!--edit-->
+
+
     <td><a href="/" class="btn btn-default">Return</a></td>
 </body>
 </html>
