--- a/templates/account.j2
+++ b/templates/account.j2
@@ -6,66 +6,9 @@
     <head>
 	<title>People</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
-	<script language="JavaScript">
-	function showform(dowhat) {
-		/*
-		 * four DIVS: browse, insert, update, delete
-		 * this function sets one visible the others not
-		 */
-		if(dowhat == 'insert') {
-			document.getElementById('browse').style.display = 'none';
-			document.getElementById('insert').style.display = 'block';
-			document.getElementById('edit').style.display = 'none';
-			document.getElementById('delete').style.display = 'none';
-		} else if(dowhat == 'update') {
-			document.getElementById('browse').style.display = 'none';
-			document.getElementById('insert').style.display = 'none';
-			document.getElementById('edit').style.display = 'block';
-			document.getElementById('delete').style.display = 'none';
-		} else if(dowhat == 'delete') {
-			document.getElementById('browse').style.display = 'none';
-			document.getElementById('insert').style.display = 'none';
-			document.getElementById('edit').style.display = 'none';
-			document.getElementById('delete').style.display = 'block';
-		} else if(dowhat == 'all') {
-			document.getElementById('browse').style.display = 'block';
-			document.getElementById('insert').style.display = 'block';
-			document.getElementById('edit').style.display = 'block';
-			document.getElementById('delete').style.display = 'block';
-		} else { //by default display browse
-			document.getElementById('browse').style.display = 'block';
-			document.getElementById('insert').style.display = 'none';
-			document.getElementById('edit').style.display = 'none';
-			document.getElementById('delete').style.display = 'none';
-		}
-	}
 
-	function newAccount() {
-		showform('insert');
-	}
 
-	function updateAccount(aid) {
-		showform('update');
-	}
 
-	function deleteAccount(aid) {
-		showform('delete');
-	}
-
-	function browseAccounts() {
-		showform('browse');
-	}
-
-	function showAll() {
-		showform('all');
-	}
-
-    // Add an event listener to the form submit event to prevent the default behavior
-    document.addEventListener('DOMContentLoaded', function() {
-        document.querySelector('form').addEventListener('submit', function(event) {
-            event.preventDefault();
-        });
-    });
 	</script>
 </head>
 
@@ -94,7 +37,7 @@
         <!-- Create a <td> element with the value of that key in it -->
         <td>{{account[key]}}</td>
         {% endfor %}
-        <td><a href="transaction/{{account.account_id}}" class="btn btn-default">Transactions</a></td>
+        <td><a href="/transaction" class="btn btn-default">Transactions</a></td>
         <td><a href="edit_account/{{account.account_id}}" class="btn btn-default">Edit</a></td>
 		<td><a href="delete_account/{{account.account_id}}" class="btn btn-default">Delete</a></td>
     </tr>
@@ -129,9 +72,6 @@
         <legend><strong>Edit Account</strong></legend>
         <fieldset>
             <input type="hidden" value="{{accounts[0].id}}" class="form-control" id="accountID" name="accountID" required>
-            <label for="name">Account Name:</label>
-
-            <input type="text" class="form-control" id="name" name="name" pattern="[A-Za-z]{1,}" placeholder="{{accounts[0].name}}" required>
             <label for="type">Account Type:</label>
 
             <input type="text" class="form-control" id="type" name="type" pattern="[A-Za-z0-9]{1,}" placeholder="{{accounts[0].type}}" required>
