edit cards and branch render_template comments update transaction.j2 update customer.j2

--- a/templates/transaction.j2
+++ b/templates/transaction.j2
@@ -36,7 +36,7 @@
     <div id="insert">
 		<!-- form to INSERT new data into Transactions-->
 		<form id="insertTransaction" action="/transaction/" method="post">
-			<legend><strong>Add Person</strong></legend>
+			<legend><strong>Add Transaction</strong></legend>
 			<fieldset>
                 <!-- placeholder shows ghost text, required forces an input, pattern forces input adherence -->
 				<label for="sender">From:</label>
