Add CRUD to accounts page

--- a/templates/branch.j2
+++ b/templates/branch.j2
@@ -25,7 +25,7 @@
         <label for="manager">manager:</label>
         <input type="text" id="manager" name="manager" value="{{ Branch.manager }}">
         <br>
-        <input type="submit" value="Update Branch">
+        <input type="submit" value="Update Branch" name="Edit_Branch">
     </form>
 </body>
 </html>
