--- a/templates/edit_account.j2
+++ b/templates/edit_account.j2
@@ -15,21 +15,17 @@
                     <tr>
                         <!-- Iterate through each key in the first entry to get the column name -->
                         {% for key in accounts[0].keys() %}
-
                         <!-- Create a <th> tag with the key inside of it, this will be our header row -->
                         <th scope="col" data-field="{{ key }}" data-filter-control="input">{{ key }}</th>
-                        
                         <!-- End of this for loop -->
                         {% endfor %} 
                     </tr>
-
                 <tbody>
                     <!-- Now, iterate through every item in accounts -->
                     {% for item in accounts %}
                     <tr>
                         <!-- Then iterate through every key in the current item dictionary -->
                         {% for key in item.keys() %}
-                        
                         <!-- Create a <td> element with the value of that key in it -->
                         <td>{{item[key]}}</td> {% endfor %} 
                     </tr> 
@@ -39,19 +35,19 @@
 
         <div id="edit">
             <!-- form to edit data in Accounts-->
-            <form id="editAccount" action="/edit_accounts/{{accounts[0].id}}" method="post">
+            <form id="editAccount" action="/edit_account/{{accounts[0].account_id}}" method="post">
                 <legend><strong>Edit Account</strong></legend>
                 <fieldset>
                     <!-- We can preset form inputs to match attributes currently stored for 'id' of account to be updated via value= and accessing our passed accounts tuple -->
                     <!-- Create hidden form input to store the passed 'id' of the account we are editing so we can access it easily in our 'POST' method in our app.py -->
-                    <input type="hidden" value="{{accounts[0].id}}" class="form-control" id="accountID" name="accountID" required>
-                    <label for="make">Account Name:</label>
+                    <input type="hidden" value="{{accounts[0].account_id}}" class="form-control" id="accountID" name="accountID" required>
+                    <label for="make">New Balance:</label>
 
                     <input type="text" value="{{accounts[0].balance}}" class="form-control" id="balance" name="balance" pattern="[0-9]{1,}" required> 
                 
                 </fieldset>
                 <input type="submit" value="Edit Account" name="Edit_Account" class="btn btn-primary" style="margin:.5rem;">
-                <a href='/accounts'><input class="btn" type="button" value="cancel"></a>
+                <a href='/account'><input class="btn" type="button" value="Cancel"></a>
             </form>
         </div>
     </div>
