add CRUD to Customers

--- a/templates/account.j2
+++ b/templates/account.j2
@@ -4,7 +4,7 @@
     <html>
     <link rel="stylesheet" href="/style.css">
     <head>
-	<title>People</title>
+	<title>Accounts</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 
 
