--- a/templates/cards.j2
+++ b/templates/cards.j2
@@ -1,70 +1,74 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Cards</title>
-    <style>
-        .tab {
-            padding: 10px;
-            margin: 5px;
-            background-color: #f2f2f2;
-            border: 1px solid #ddd;
-            cursor: pointer;
-            text-decoration: none;
-            color: black;
-        }
-
-        .tab:hover {
-            background-color: #ddd;
-        }
-    </style>
-</head>
-<body>
-<div class="tabs">
-        <a href="/" class="tab">Home</a> 
-        
-    </div>
-    <h1>Cards</h1>
+<!--Based on templates sourced from https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/edit_people.j2 -->
     
-    <h2>Add New Card</h2>
-    <form method="POST">
-    <legend><strong>Add Card</strong></legend>
-        <fieldset class="fields">
-        <label for="card_id">card_id:</label>
-        <input type="number" id="card_id" name="card_id">
-        <br>
-        <label for="account_id">account_id</label>
-        <input type="number" id="account_id" name="account_id" required>
-        <br>
-        <label for="security_code">scc:</label>
-        <input type="number" id="security_code" name="security_code">
-        <br>
-        <label for="exp_date">exp_date:</label>
-        <input type="date" id="exp_date" name="exp_date">
-        <br>
-        <input type="submit" value="Add Card">
-    </form>
+    <!DOCTYPE html>
+    <html>
+    <link rel="stylesheet" href="/style.css">
+    <head>
+	<title>Accounts</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 
-    <h2>Cards</h2>
-    <table border="3" cellpadding="5">
-    <thead>
+
+
+	</script>
+</head>
+
+    <body onload="browseCards()">
+    <div id="browse">
+    <caption>Cards</caption>
+    <table border="1" cellpadding="5">
+    <thead> 
     <tr>
+        <!-- Iterate through each key in the first entry to get the
+        column name -->
         {% for key in Cards[0].keys() %}
-            <th>{{ key }}</th>
+        <!-- Create a <th> tag with the key inside of it, this will be
+        our header row -->
+        <th scope="col" data-field="{{ key }}" data-filter-control="input">{{ key }}</th>
+        <!-- End of this for loop -->
         {% endfor %}
-        <th>EDIT</th>
-        <th>DELETE</th>
     </tr>
     <tbody>
-        {% for card in Cards %}
-        <tr>
-            {% for key in card.keys() %}
-                <td>{{card[key]}}</td>
-            {% endfor %}
-            <td><a href="/cards/{{card.card_id}}" class="btn btn-default">EDIT</a></td>
-            <td><a href="/delete_card/{{card.card_id}}" class="btn btn-default">DELETE</a></td>
-        </tr>
-        {% endfor %}
+
+    <!-- Now, iterate through every account in Accounts -->
+    {% for card in Cards %}
+    <tr>
+        <!-- Then iterate through every key in the current account dictionary -->
+        <td>{{card.card_id}}</td>
+        <td>{{card.account_id}}</td>
+        <td>{{card.security_code}}</td>
+        <td>{{card.exp_date}}</td>
+        
+        <td><a href="edit_card/{{card.card_id}}" class="btn btn-default">Edit</a></td>
+		<td><a href="delete_card/{{card.card_id}}" class="btn btn-default">Delete</a></td>
+    </tr>
+    {% endfor %}
     </table>
+    <p>&nbsp;</p>
+    </div>	<!-- browse -->
+
+
+	<div id="insert">
+    <!-- form to INSERT new data into Cards-->
+    <form id="Add_Card" action="/cards" method="POST">
+        <legend><strong>Add Card</strong></legend>
+        <fieldset>
+            <!-- placeholder shows ghost text, required forces an input, pattern forces input adherence -->
+            <label for="card_id"> Card ID </label>
+            <input type="number" class="form-control" id="card_id" name="card_id" placeholder="" required>
+            <label for="account_id">Account ID</label>
+            <input type="number" class="form-control" id="account_id" name="account_id" placeholder="" required>
+            <label for="security_code">SCC</label>
+            <input type="text" class="form-control" id="security_code" name="security_code"  placeholder="" required>
+            <label for="exp_date">exp_date</label>
+            <input type="date" class="form-control" id="exp_date" name="exp_date" placeholder="" required>
+        </fieldset>
+
+        <!-- Create 'Add Account' and 'Cancel' buttons -->
+        <input type="submit" value="Add Account" name="Add_Card" class="btn btn-primary" style="margin:.5rem;">
+        <input class="btn" type="button" value="Cancel" onClick="browseCards()"> 
+    </form>
+
+
+    <td><a href="/" class="btn btn-default">Return</a></td>
 </body>
 </html>
