--- a/templates/branches.j2
+++ b/templates/branches.j2
@@ -1,73 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Branches</title>
-    <style>
-        .tab {
-            padding: 10px;
-            margin: 5px;
-            background-color: #f2f2f2;
-            border: 1px solid #ddd;
-            cursor: pointer;
-            text-decoration: none;
-            color: black;
-        }
-
-        .tab:hover {
-            background-color: #ddd;
-        }
-    </style>
-</head>
-<body>
-<div class="tabs">
-        <a href="/" class="tab">Home</a> 
-        
-    </div>
-    <h1>Branches</h1>
+<!--Based on templates sourced from https://github.com/osu-cs340-ecampus/flask-starter-app/blob/master/bsg_people_app/templates/edit_people.j2 -->
     
-    <h2>Add New Branches</h2>
-    <form method="POST">
-    <legend><strong>Add Branch</strong></legend>
-        <fieldset class="fields">
-        <label for="branch_id">branch_id:</label>
-        <input type="number" id="branch_id" name="branch_id">
-        <br>
-        <label for="branch_name">branch_name</label>
-        <input type="text" id="branch_name" name="branch_name" required>
-        <br>
-        <label for="address">address:</label>
-        <input type="text" id="address" name="address">
-        <br>
-        <label for="phone">phone:</label>
-        <input type="text" id="phone" name="phone">
-        <br>
-        <label for="manager">manager:</label>
-        <input type="text" id="manager" name="manager">
-        <br>
-        <input type="submit" value="Add Branch">
-    </form>
+    <!DOCTYPE html>
+    <html>
+    <link rel="stylesheet" href="/style.css">
+    <head>
+	<title>Accounts</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 
-    <h2>Branches</h2>
-    <table border="3" cellpadding="5">
-    <thead>
+
+
+	</script>
+</head>
+
+    <body onload="browseBranches()">
+    <div id="browse">
+    <caption>Branches</caption>
+    <table border="1" cellpadding="5">
+    <thead> 
     <tr>
+        <!-- Iterate through each key in the first entry to get the
+        column name -->
         {% for key in Branches[0].keys() %}
-            <th>{{ key }}</th>
+        <!-- Create a <th> tag with the key inside of it, this will be
+        our header row -->
+        <th scope="col" data-field="{{ key }}" data-filter-control="input">{{ key }}</th>
+        <!-- End of this for loop -->
         {% endfor %}
-        <th>EDIT</th>
-        <th>DELETE</th>
     </tr>
     <tbody>
-        {% for branch in Branches %}
-        <tr>
-            {% for key in branch.keys() %}
-                <td>{{branch[key]}}</td>
-            {% endfor %}
-            <td><a href="/branches/{{branch.branch_id}}" class="btn btn-default">EDIT</a></td>
-            <td><a href="/delete_branch/{{branch.branch_id}}" class="btn btn-default">DELETE</a></td>
-        </tr>
-        {% endfor %}
+
+    <!-- Now, iterate through every account in Accounts -->
+    {% for branch in Branches %}
+    <tr>
+        <!-- Then iterate through every key in the current account dictionary -->
+        <td>{{branch.branch_id}}</td>
+        <td>{{branch.branch_name}}</td>
+        <td>{{branch.address}}</td>
+        <td>{{branch.phone}}</td>
+        <td>{{branch.manager}}</td>
+        
+        
+        <td><a href="edit_branch/{{branch.branch_id}}" class="btn btn-default">Edit</a></td>
+		<td><a href="delete_branch/{{branch.branch_id}}" class="btn btn-default">Delete</a></td>
+    </tr>
+    {% endfor %}
     </table>
+    <p>&nbsp;</p>
+    </div>	<!-- browse -->
+
+
+	<div id="insert">
+    <!-- form to INSERT new data into Cards-->
+    <form id="Add_Branch" action="/branches" method="POST">
+        <legend><strong>Add Branch</strong></legend>
+        <fieldset>
+            <!-- placeholder shows ghost text, required forces an input, pattern forces input adherence -->
+            <label for="branch_id"> Branch ID </label>
+            <input type="number" class="form-control" id="branch_id" name="branch_id" placeholder="" required>
+            <label for="branch_name">Branch Name</label>
+            <input type="text" class="form-control" id="branch_name" name="branch_name" placeholder="" required>
+            <label for="address">Address</label>
+            <input type="text" class="form-control" id="address" name="address"  placeholder="" required>
+            <label for="phone">Phone</label>
+            <input type="text" class="form-control" id="phone" name="phone" placeholder="" required>
+            <label for="manager">Manager</label>
+            <input type="text" class="form-control" id="manager" name="manager" placeholder="" required>
+        </fieldset>
+
+        <!-- Create 'Add Branch' and 'Cancel' buttons -->
+        <input type="submit" value="Add Branch" name="Add_Branch" class="btn btn-primary" style="margin:.5rem;">
+        <input class="btn" type="button" value="Cancel" onClick="browseBranches()"> 
+    </form>
+
+
+    <td><a href="/" class="btn btn-default">Return</a></td>
 </body>
 </html>
