--- a/templates/cards.j2
+++ b/templates/cards.j2
@@ -63,8 +63,8 @@
             <input type="date" class="form-control" id="exp_date" name="exp_date" placeholder="" required>
         </fieldset>
 
-        <!-- Create 'Add Account' and 'Cancel' buttons -->
-        <input type="submit" value="Add Account" name="Add_Card" class="btn btn-primary" style="margin:.5rem;">
+        <!-- Create 'Add Card' and 'Cancel' buttons -->
+        <input type="submit" value="Add Card" name="Add_Card" class="btn btn-primary" style="margin:.5rem;">
         <input class="btn" type="button" value="Cancel" onClick="browseCards()"> 
     </form>
 
