--- a/templates/card.j2
+++ b/templates/card.j2
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Edit Account</title>
+    <title>Edit Branch</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
