Minor HTML edits on card pages

--- a/templates/cards.j2
+++ b/templates/cards.j2
@@ -2,9 +2,9 @@
     
     <!DOCTYPE html>
     <html>
-    <link rel="stylesheet" href="/style.css">
+
     <head>
-	<title>Accounts</title>
+	<title>Cards</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 
 
